--- a/Lab2/src/Makefile
+++ b/Lab2/src/Makefile
@@ -5,7 +5,7 @@ all:
 	$(CC) $(CFLAGS) -o FCFS FCFS.c
 	$(CC) $(CFLAGS) -o SJF SJF.c
 	$(CC) $(CFLAGS) -o SRTN SRTN.c
-
+	$(CC) $(CFLAGS) -o EDF EDF.c
 
 run:
 	./FCFS
