--- a/Lab2/src/Makefile
+++ b/Lab2/src/Makefile
@@ -1,11 +1,11 @@
 CC=gcc
-CFLAGS=-I. -O0 -g
+CFLAGS=-I. -Ofast -g
 
 all:
 	$(CC) $(CFLAGS) -o FCFS FCFS.c
-	$(CC) $(CFLAGS) -o SJF SJF.c
+	$(CC) $(CFLAGS) -o SJF  SJF.c
 	$(CC) $(CFLAGS) -o SRTN SRTN.c
-	$(CC) $(CFLAGS) -o EDF EDF.c
+	$(CC) $(CFLAGS) -o EDF  EDF.c
 
 run:
-	./FCFS
+	./EDF 10 
